tests/NormalTests/paczka1/small_fuzzy/76072936.err
Error in line 1: UjdVmDyar S21 50,9
Error in line 8: z1dEH8L4a S898 46,1
